--- a/.gitignore
+++ b/.gitignore
@@ -45,4 +45,6 @@ trainingSets/dataset_20251005_151537_2bfc68aa/training_set_1/rqR_dataset_2025100
 
 # Puoi anche ignorare intere cartelle
 datasetsAugmentation/
+parent_dir_dataset/
+indexes/
 trainingSets/
